2006-01-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ObjectStateFormatter.cs: Merged TARGET_JVM parts in 
	TypeFormatter.Read, TypeFormatter.Write from /main/5

2006-01-09  Konstantin Triger <kostat@mainsoft.com>

	* Page.cs: make ProcessRequest virtual under TARGET_JVM.

2006-01-04  Chris Toshok  <toshok@ximian.com>

	* TemplateParser.cs (.ctor): kinda gross, but handle the
	AddAssembliesInBin case here.
	
	* SimpleWebHandlerParser.cs (.ctor): same.

2006-01-04  Chris Toshok  <toshok@ximian.com>

	* SimpleWebHandlerParser.cs: Remove the declaration of
	compilationConfig in the CONFIGURATION_2_0 case.  it's
	unnecessary.
	(.ctor): ifdef out the AddAssembliesInBin call in the
	CONFIGURATION_2_0 case.  need to revisit this.
	(CompilationConfig): add a CONFIGURATION_2_0 version.

	* BaseParser.cs: Remove the declaration of compilationConfig in
	the CONFIGURATION_2_0 case.  it's unnecessary.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: use _controls instead of the property wherever possible.

2005-12-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: use the _controls field instead of the Controls property.
	Fixes bug #76919.

2005-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyedList.cs: Fixed for IOrderedDictionary change in 2.0 final.
	Now internal.
	* KeyedListEnumerator.cs: Now internal.

2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ControlCollection.cs: allow 'null' in Remove.

2005-11-28  Chris Toshok  <toshok@ximian.com>

	* Page.cs (GetFormatter): CONFIGURATION_2_0 work.

	* TemplateParser.cs (..ctor): CONFIGURATION_2_0 work.
	(PagesConfig): add a CONFIGURATION_2_0 version that returns a
	PagesSection.

	* PageParser.cs (ProcessMainAttributes): CONFIGURATION_2_0 work.

	* BaseParser.cs (CompilationConfig): add a CONFIGURATION_2_0
	version that returns a CompilationSection.

2005-11-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>
