@@ -1,3 +1,8 @@
+2006-01-09  Chris Toshok  <toshok@ximian.com>
+
+	* Page.cs: fix a lot of indentation, and add the
+	EnableEventValidation .net 2.0 property.
+
 2006-01-09  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* ObjectStateFormatter.cs: Merged TARGET_JVM parts in 
